[package]
name = "engineio"
version = "0.1.0"
authors = ["PhilippGackstatter <philipp.gackstatter@student.tuwien.ac.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.41"
serde =  { version = "1.0.102", features = ["derive"]}
reqwest = "0.10.0-alpha.1"
