[package]
name = "engineio"
version = "0.1.0"
authors = ["PhilippGackstatter <philipp.gackstatter@student.tuwien.ac.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.41"
serde =  { version = "1.0.102", features = ["derive"]}
surf = { version = "1.0.3", features = ["curl-client"] }
async-std = "0.99.12"
futures-preview = { version = "0.3.0-alpha.19", features = [ "async-await" ] }
fnv = "1.0.6"
log = "0.4.8"
simple_logger = "1.3.0"
async-trait = "0.1.18"
