[package]
name = "engineio_examples"
version = "0.1.0"
authors = ["PhilippGackstatter <philipp.gackstatter@student.tuwien.ac.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engineio = { path = "../" }
async-std = { version = "1.0.1", features = [ "attributes" ] }
log = "0.4.8"
env_logger = "0.7.1"
async-trait = "0.1.18"